examples/bad/bad_return.mko
fn bad() -> int {
    return "nope"
}

fn main() {
    print_int(bad())
}
